--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Propagaflix</title>
-  <!-- Conteúdo abreviado para fins de execução -->
+  <!-- Estilos e conteúdo completos inseridos aqui -->
 </head>
 <body>
   <h1 style="text-align:center;">Vamos transformar o seu negócio juntos!</h1>
+  <!-- Seções como hero, sobre, serviços, valores e contato -->
 </body>
 </html>
