--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Propagaflix</title>
-  <!-- Estilos e conteúdo completos inseridos aqui -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h1 style="text-align:center;">Vamos transformar o seu negócio juntos!</h1>
-  <!-- Seções como hero, sobre, serviços, valores e contato -->
+  <!-- Código HTML será preenchido aqui -->
 </body>
 </html>
